[gd_scene load_steps=15 format=3 uid="uid://l3ok3uxvf6bl"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_k446t"]
[ext_resource type="Texture2D" uid="uid://sedcqc4kane0" path="res://Sprites/wood-surface-with-aged-look-coarse-appearance.jpg" id="2_erexa"]
[ext_resource type="Texture2D" uid="uid://c6f5kosi2x2rv" path="res://Sprites/line.png" id="3_cki0b"]
[ext_resource type="Texture2D" uid="uid://bildwxkoddny0" path="res://Sprites/numbers.png" id="3_pc2ef"]
[ext_resource type="Texture2D" uid="uid://c4rlv6boifg8s" path="res://Sprites/actual_gamelan_sprite.png" id="3_wikpc"]
[ext_resource type="Texture2D" uid="uid://rhg75pdgprdc" path="res://Sprites/paper-texture.png" id="4_b0kss"]
[ext_resource type="Texture2D" uid="uid://lpw28wqcrg8w" path="res://Sprites/Black-Blur-PNG-Pic.png" id="4_jeojo"]
[ext_resource type="Texture2D" uid="uid://bko80wl4gyn2r" path="res://Sprites/whiteplay.png" id="6_qvxxj"]
[ext_resource type="Texture2D" uid="uid://ck8pc5dfmjf1m" path="res://Sprites/whitepause.png" id="7_mgvqm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3iysk"]
texture = ExtResource("4_b0kss")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2n7h4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="LabelSettings" id="LabelSettings_c30ij"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_fkqks"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_84kee"]
size = Vector2(55, 52)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_k446t")

[node name="GamelanBackground" type="Sprite2D" parent="."]
position = Vector2(578.667, 341)
scale = Vector2(0.287037, 0.287037)

[node name="Numbers" type="Sprite2D" parent="GamelanBackground"]
position = Vector2(-17.4194, 38.3226)
scale = Vector2(2.10363, 2.10363)
texture = ExtResource("3_pc2ef")

[node name="Sprite2D" type="Sprite2D" parent="GamelanBackground"]
modulate = Color(0.93842, 0.793069, 0.760497, 1)
position = Vector2(-8.51798, -3.26616)
rotation = 3.14159
scale = Vector2(2.62155, 2.56902)
texture = ExtResource("3_wikpc")

[node name="Key_1" type="Area2D" parent="GamelanBackground"]

[node name="Key1" type="Polygon2D" parent="GamelanBackground/Key_1"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-2031.1, -1222.84)
scale = Vector2(3.48387, 3.48387)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(99, 500, 121, 154, 213, 162, 193, 501)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_1"]
polygon = PackedVector2Array(-1608.39, -693.29, -1681.55, 508.645, -1361.03, 519.097, -1294.84, -661.935)

[node name="Key_2" type="Area2D" parent="GamelanBackground"]

[node name="Key2" type="Polygon2D" parent="GamelanBackground/Key_2"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-1674.09, -1179.51)
scale = Vector2(3.36163, 3.38347)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(99, 500, 121, 154, 213, 162, 193, 501)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_2"]
polygon = PackedVector2Array(-1273.94, -658.452, -1329.68, 501.677, -1016.13, 498.194, -974.323, -623.613)

[node name="Key_3" type="Area2D" parent="GamelanBackground"]

[node name="Key3" type="Polygon2D" parent="GamelanBackground/Key_3"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-1257.68, -1146.19)
scale = Vector2(2.83677, 3.31066)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(99, 500, 121, 154, 213, 162, 193, 501)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_3"]
polygon = PackedVector2Array(-918.581, -599.226, -646.839, -588.774, -706.065, 470.323, -974.323, 470.323)

[node name="Key_4" type="Area2D" parent="GamelanBackground"]

[node name="Key4" type="Polygon2D" parent="GamelanBackground/Key_4"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-963.09, -1102.46)
scale = Vector2(2.96771, 3.1671)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(99, 500, 121, 154, 213, 162, 193, 501)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_4"]
polygon = PackedVector2Array(-605.032, -609.677, -653.807, 445.936, -399.484, 449.419, -357.677, -595.742)

[node name="Key_5" type="Area2D" parent="GamelanBackground"]

[node name="Key5" type="Polygon2D" parent="GamelanBackground/Key_5"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-661.755, -1050.29)
scale = Vector2(2.92691, 2.97256)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(99, 500, 121, 154, 213, 162, 193, 501)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_5"]
polygon = PackedVector2Array(-305.419, -578.323, -333.29, 411.097, -96.3872, 418.065, -68.5162, -578.323)

[node name="Key_6" type="Area2D" parent="GamelanBackground"]

[node name="Key6" type="Polygon2D" parent="GamelanBackground/Key_6"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-271.742, -919.742)
scale = Vector2(2.45899, 2.5363)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(102.009, 145.602, 192.683, 142.855, 187.016, 519.222, 90.6743, 520.596)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_6"]
polygon = PackedVector2Array(-16.2582, -557.419, -54.5807, 393.677, 175.355, 393.677, 206.71, -550.452)

[node name="Key_7" type="Area2D" parent="GamelanBackground"]

[node name="Key7" type="Polygon2D" parent="GamelanBackground/Key_7"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-66.1936, -1090.45)
scale = Vector2(3.24368, 3.28596)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(100.961, 159.034, 172.922, 162.215, 163.255, 454.838, 89.1461, 447.416)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_7"]
polygon = PackedVector2Array(265.935, -571.355, 231.097, 362.323, 450.581, 390.194, 492.387, -553.935)

[node name="Key_8" type="Area2D" parent="GamelanBackground"]

[node name="Key8" type="Polygon2D" parent="GamelanBackground/Key_8"]
modulate = Color(1, 1, 1, 0)
position = Vector2(118.452, -1093.94)
scale = Vector2(3.36163, 3.38347)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(121.255, 161.659, 188.618, 163.718, 182.4, 432.463, 112.964, 428.344)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_8"]
polygon = PackedVector2Array(523.742, -543.484, 492.387, 337.936, 722.323, 376.258, 760.645, -540)

[node name="Key_9" type="Area2D" parent="GamelanBackground"]

[node name="Key9" type="Polygon2D" parent="GamelanBackground/Key_9"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-1674.09, -1179.51)
scale = Vector2(3.36163, 3.38347)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(734.291, 184.89, 800.618, 187.979, 795.436, 454.665, 729.109, 452.605)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_9"]
polygon = PackedVector2Array(809.419, -557.419, 788.516, 351.871, 997.548, 358.839, 1028.9, -546.968)

[node name="Key_10" type="Area2D" parent="GamelanBackground"]

[node name="Key10" type="Polygon2D" parent="GamelanBackground/Key_10"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-1674.09, -1179.51)
scale = Vector2(3.36163, 3.38347)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(808.909, 193.128, 873.164, 193.128, 871.091, 451.576, 807.873, 447.457)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_10"]
polygon = PackedVector2Array(1053.29, -526.065, 1028.9, 344.903, 1248.39, 358.839, 1272.77, -526.065)

[node name="Key_11" type="Area2D" parent="GamelanBackground"]

[node name="Key11" type="Polygon2D" parent="GamelanBackground/Key_11"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-1674.09, -1179.51)
scale = Vector2(3.36163, 3.38347)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(892.854, 194.157, 949.854, 196.217, 942.6, 445.398, 888.709, 445.398)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_11"]
polygon = PackedVector2Array(1325.03, -512.129, 1300.65, 324, 1506.19, 341.419, 1520.13, -508.645)

[node name="Key_12" type="Area2D" parent="GamelanBackground"]

[node name="Key12" type="Polygon2D" parent="GamelanBackground/Key_12"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-1674.09, -1179.51)
scale = Vector2(3.36163, 3.38347)
color = Color(0, 1, 0, 1)
invert_border = 5.0
polygon = PackedVector2Array(963.327, 202.395, 1006.85, 200.335, 1014.11, 447.457, 960.218, 446.427)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="GamelanBackground/Key_12"]
polygon = PackedVector2Array(1551.48, -498.194, 1527.1, 313.548, 1725.68, 324, 1729.16, -501.677)

[node name="Black-blur-png-pic" type="Sprite2D" parent="GamelanBackground/Key_12"]
z_index = -1
position = Vector2(339.096, -45.2901)
scale = Vector2(5.62645, 1.50387)
texture = ExtResource("4_jeojo")

[node name="Black-blur-png-pic2" type="Sprite2D" parent="GamelanBackground/Key_12"]
z_index = -1
position = Vector2(156.193, -118.451)
scale = Vector2(5.93129, 2.41548)
texture = ExtResource("4_jeojo")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
grow_vertical = 0

[node name="Background" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_top = 531.0
offset_right = 1916.0
offset_bottom = 1006.0
theme_override_styles/panel = SubResource("StyleBoxTexture_3iysk")

[node name="MarginContainer" type="MarginContainer" parent="Control/Background"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="Control/Background/MarginContainer"]
layout_mode = 2

[node name="Info" type="PanelContainer" parent="Control/Background/MarginContainer/Rows"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2n7h4")

[node name="ScrollContainer" type="ScrollContainer" parent="Control/Background/MarginContainer/Rows/Info"]
layout_mode = 2

[node name="HistoryRows" type="VBoxContainer" parent="Control/Background/MarginContainer/Rows/Info/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Notes" type="Label" parent="Control/Background/MarginContainer/Rows/Info/ScrollContainer/HistoryRows"]
layout_mode = 2
label_settings = SubResource("LabelSettings_c30ij")
autowrap_mode = 3

[node name="PlayButton" type="Area2D" parent="."]
position = Vector2(0, -27)

[node name="Play-button-sprite" type="Sprite2D" parent="PlayButton"]
material = SubResource("CanvasItemMaterial_fkqks")
position = Vector2(1113, 497)
scale = Vector2(0.0986328, 0.0986328)
texture = ExtResource("6_qvxxj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayButton"]
position = Vector2(1111.5, 498)
shape = SubResource("RectangleShape2D_84kee")
debug_color = Color(0.968627, 0, 0.470588, 0.760784)

[node name="Pause-button-sprite" type="Sprite2D" parent="PlayButton"]
modulate = Color(1, 1, 1, 0)
position = Vector2(1110, 499)
scale = Vector2(0.115235, 0.115235)
texture = ExtResource("7_mgvqm")

[node name="Moshed-2025-2-1-12-26-24" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(981.849, 322.434)
scale = Vector2(0.340851, 0.340851)
texture = ExtResource("2_erexa")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1023, 522)
rotation = 1.56381
scale = Vector2(0.420673, 1)
texture = ExtResource("3_cki0b")

[connection signal="input_event" from="PlayButton" to="." method="_on_play_button_input_event"]
